Added Models and DBLayer

--- a/chat-app-authentication/appsettings.json
+++ b/chat-app-authentication/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnString": "Data Source=(localdb);Initial Catalog=ChatAppUserDb; Integrated Security= True"
+  },
+  "JWT": {
+    "Secret":  "MySecret"
+  }
 }
