Add controller and logic for user register and user login

--- a/chat-app-authentication/appsettings.json
+++ b/chat-app-authentication/appsettings.json
@@ -7,9 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnString": "Data Source=(localdb);Initial Catalog=ChatAppUserDb; Integrated Security= True"
+    "SqlServerConnString": "Server=(local);Initial Catalog=ChatAppUserDb; Integrated Security=True; TrustServerCertificate=True"
   },
   "JWT": {
-    "Secret":  "MySecret"
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
+    "ValidIssuer": "",
+    "ValidAudience": ""
   }
 }
